# NewbieHeaderTool

./: CMakeLists.txt  README.md  compile_commands.json  example_parser.hpp  generated.cpp  main.cpp  serialize.cpp
example/: CMakeLists.txt
sample/: Asset.hpp  Engine.hpp  Entity.cpp  Entity.hpp  GameObject.hpp  Resource.hpp  Script.hpp  Transform.hpp  Type.hpp  sample.hpp
sample/Graphics/: Camera.cpp  Camera.hpp  Drawer.hpp  Material.hpp  Mesh.hpp  MeshDrawer.hpp  Renderer.hpp
